--- a/main.css
+++ b/main.css
@@ -167,5 +167,10 @@ h4 {
     background-color: #212529;
     padding: 0.5rem 2rem;
     width: fit-content;
+    margin: auto;
+    margin-top: 5px;
+}
+.allegro .usability img {
+    margin-bottom: 0;
 }
 /* allegro end */
