--- a/main.css
+++ b/main.css
@@ -26,6 +26,8 @@ body {
     width: 100%;
 }
 .footer {
+    color: #F8F9FA;
+    background-color: #212529;
     width: 100%;
     height: 50px;
     display: flex;
