--- a/main.css
+++ b/main.css
@@ -94,7 +94,9 @@ h4 {
     font-size: 2.2rem;
     color: #212529;
 }
-
+.icons {
+    color: #F8F9FA;
+}
 /* eatfit start */
 .eatfit h4 {
     font-family: 'Raleway', sans-serif;
